# omp-argon2

./: CMakeLists.txt  LICENSE  README.md  argon2-component.cpp  argon2-component.hpp  argon2-utils.hpp  main.cpp  natives.cpp
.github/workflows/: release.yml
examples/: login_mysql.pwn
include/: omp_argon2.inc
